--- a/assests/styles/navbar.css
+++ b/assests/styles/navbar.css
@@ -5,6 +5,10 @@ nav{
     justify-content: space-evenly;
     align-items: center;
     font-size: 15px;
+    position: sticky;
+    top:0px;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 3px rgba(0,0,0,0.1);
 }
 
 nav ul{
@@ -56,7 +60,7 @@ nav ul li .scholar-off{
         font-size: 12px;
     }
 }
-@media screen and (max-width: 750px){
+@media screen and (max-width: 800px){
     nav{
         font-size: 10px;
     }
@@ -69,11 +73,13 @@ nav ul li .scholar-off{
         font-size: 15px;
     }
     nav ul{
+        position: absolute;
+        top:50px;
         flex-direction: column;
-        height: 92vh;
+        height: 95vh;
         width: 100%;
         align-items: center;
-        background-color: #dfe4ea;
+        background-color: #eef1f4;
         transform: translate(-100%);
         transition: 0.3s;
     }
