--- a/assests/styles/navbar.css
+++ b/assests/styles/navbar.css
@@ -26,7 +26,11 @@ nav ul li{
     cursor: pointer;
     position: relative;
     /* border:1px solid; */
+}
+nav ul li a{
     padding: 4px 0px;
+    width: 100%;
+    z-index: 10;
 }
 
 nav ul li::before{
@@ -35,7 +39,7 @@ nav ul li::before{
     width: 100%;
     height: 3px;
     background-color: var(--theme-font-color);
-    bottom: -20px;
+    bottom: -30px;
     transition: all 0.4s;
     opacity: 0;
     z-index: -100;
