--- a/assests/styles/courses.css
+++ b/assests/styles/courses.css
@@ -2,7 +2,8 @@
 .courses{
     font-family: 'Inria Sans', sans-serif;
     background-color: #FBFBFB;
-    padding: 60px 0 3em 0;
+    padding: var(--nav-padding) 0 3em 0;
+
     display: flex;
     flex-direction: column;
     align-items: center;
