--- a/assests/styles/faq.css
+++ b/assests/styles/faq.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 60px;
+    padding-top: var(--nav-padding);
     padding-bottom: 30px;
     margin-top: 40px;
     background-color: #fafafa;
