--- a/assests/styles/how-to.css
+++ b/assests/styles/how-to.css
@@ -2,7 +2,7 @@
     text-align: center;
     font-family: "Inter", sans-serif;
     background-color: #fff;
-    padding-top: 60px;
+    padding-top: var(--nav-padding);
     font-size: 16px;;
 }
 
