--- a/assests/styles/scholarship.css
+++ b/assests/styles/scholarship.css
@@ -5,7 +5,7 @@
     align-items: center;
     font-family: 'Inter', sans-serif;
     gap:5vh;
-    padding: 60px 0 40px 0;
+    padding: var(--nav-padding) 0 40px 0;
     font-size: 17px;
 }
 
@@ -18,6 +18,13 @@
 #scholarship .tag-line span{
     color: var(--theme-font-color);
     font-weight: 700;
+}
+.scholarship .reg-now{
+    color: var(--theme-font-color);
+    border: 2px solid var(--theme-font-color);
+    border-radius: 5px;
+    padding: 7px 15px;
+    cursor: pointer;
 }
 #scholarship .info{
     display: flex;
@@ -96,7 +103,10 @@
         padding: 60px 20px 40px 20px;
     }
     #scholarship .cnsat-img{
-        width: 40%;
+        width: 50%;
+    }
+    #scholarship .tag-line{
+        text-align: center;
     }
     #scholarship .info{
         flex-direction: column;
