--- a/assests/styles/how-to.css
+++ b/assests/styles/how-to.css
@@ -60,7 +60,6 @@
     color: white;
     width: fit-content;
     padding: 0.7em 1.2em;
-    /* cursor: pointer; */
     border-radius: 5px;
     position: relative;
     top:15px;
@@ -69,7 +68,8 @@
 }
 .how-to .dw-cards .dw-card .btn:hover{
     box-shadow: 0 1px 1px rgba(0,0,0,0.25);
-    transition: 0.1s;
+    transition: 0.3s;
+    background-color: #ff8000;
 
 }
 
