--- a/assests/styles/scholarship.css
+++ b/assests/styles/scholarship.css
@@ -26,6 +26,11 @@
     padding: 7px 15px;
     cursor: pointer;
 }
+.scholarship .reg-now:hover{
+    color:white;
+    background-color: var(--theme-font-color);
+    transition:0.2s cubic-bezier(.17,.67,.72,.51);
+}
 #scholarship .info{
     display: flex;
     height: fit-content;
@@ -77,12 +82,18 @@
 }
 
 #scholarship .more-details-btn{
+    box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
     background-color: var(--theme-font-color);
     color: white;
     padding: 0.8em 1em;
     border-radius: 7px;
-    box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
-
+    transition: 0.3s;
+}
+#scholarship .more-details-btn:hover{
+    background-color: orange;
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.25);
+    transition: 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    
 }
 @media screen and (max-width:1024px) {
     #scholarship{
