--- a/assests/styles/landing-display.css
+++ b/assests/styles/landing-display.css
@@ -26,9 +26,18 @@
 .landing-display .display-text .larger-text span{
     font-size: 70px;
 }
-.landing-display .display-text .smaller-text{
-    font-size: 14px;
+.text-coupon-code{
+    font-size: 20px;
+    font-family: 'Inter', sans-serif;
     font-weight: 600;
+    text-shadow: 0px 0px 4px rgba(0,0,0,0.25);
+}
+.text-coupon-code span{
+    font-weight: 800;
+}
+.landing-display .display-text .smaller-text{
+    font-weight: 600;
+    font-size: 14px;
     line-height: 35px;
     text-shadow: 0px 0px 4px rgba(0,0,0,0.25);
 }
@@ -53,6 +62,7 @@
     font-size: 1.1em;
     font-weight: 700;
 }
+
 .landing-display .display-text .btns .get-now-btn{
     background-color: #FA8700;
     padding: 10px 25px;
