--- a/assests/styles/landing-display.css
+++ b/assests/styles/landing-display.css
@@ -7,6 +7,7 @@
     background-size: cover;
     display: flex;
     align-items: center;
+    overflow: hidden;
 }
 .landing-display .display-text{
     width: 55%;
