--- a/assests/styles/scholarship.css
+++ b/assests/styles/scholarship.css
@@ -7,6 +7,7 @@
     gap:5vh;
     padding: var(--nav-padding) 0 40px 0;
     font-size: 17px;
+    box-shadow: 0px -2px 1px 0px rgba(0,0,0,0.1);
 }
 
 #scholarship .cnsat-img{
